@@ -4,6 +4,7 @@
 	* Fix compiler warnings.
 	* Add SerialFile class to access a serial console.
 	* Add example program 'serialread'.
+	* Add replace_char() function in stringutil.h.
 
 2010-11-27  Bernhard Walle <bernhard@bwalle.de>
 
